--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   url_launcher: ^6.3.1
   equatable: ^2.0.7
   flutter_helper_utils: ^7.0.1
+  hive_ce_flutter: ^2.2.0
+  path_provider: ^2.1.5
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -36,7 +39,9 @@ flutter:
 screenshots:
   - description: 'Card styles link preview'
     path: screenshots/1.png
-  - description: 'Multi link detection'
+  - description: 'URL detection preview'
     path: screenshots/2.png
-  - description: 'Custom styles link preview'
+  - description: 'Controller usage preview'
     path: screenshots/3.png
+  - description: 'Custom styles link preview'
+    path: screenshots/4.png
