--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: metalink_flutter
 description: Flutter UI components for link previews using the MetaLink package
-version: 1.0.0
+version: 1.0.1
 repository: https://github.com/omar-hanafy/metalink_flutter
 topics:
-  - link preview
-  - link detector
+  - link-preview
+  - link-detector
   - url
   - link
   - metadata
@@ -18,20 +18,19 @@ dependencies:
     sdk: flutter
   
   # Core link extraction
-  metalink: ^1.0.1
+  metalink: ^1.0.3
   
   # Required utilities
   url_launcher: ^6.3.1
   equatable: ^2.0.7
   flutter_helper_utils: ^7.0.1
   hive_ce_flutter: ^2.2.0
-  path_provider: ^2.1.5
   http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  very_good_analysis: 7.0.0
 
 flutter:
   uses-material-design: true
