--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: metalink_flutter
 description: Flutter UI components for link previews using the MetaLink package
-version: 1.0.1
+version: 1.0.2
 repository: https://github.com/omar-hanafy/metalink_flutter
 topics:
   - link-preview
@@ -18,12 +18,12 @@ dependencies:
     sdk: flutter
   
   # Core link extraction
-  metalink: ^1.0.3
+  metalink: ^1.0.4
   
   # Required utilities
   url_launcher: ^6.3.1
   equatable: ^2.0.7
-  flutter_helper_utils: ^7.0.1
+  flutter_helper_utils: ">=7.0.1 <9.0.0"
   hive_ce_flutter: ^2.2.0
   http: ^1.3.0
 
